  * Remove powerpc/ps3 low-memory profile, as it doesn't do anything any
    more. gnome-session-remove command is no longer present, and the init
    processes it tried to stop no longer exist under those names. We do
    want a low memory profile, which ubiquity-only mode now.
  * ubiquity-wrapper: Add support for udisks2 inhibit, drop devkit-disks
    inhibit. (LP: #719338)
  * Automatic update of included source packages: base-installer
    1.122ubuntu9.

  [ Dylan McCall ]
  * Fixed slideshow_get_available_locale missing new locales in
    extra_slides_dir. (LP: #1046511)

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 05 Sep 2012 18:26:21 +0100

ubiquity (2.11.30) quantal; urgency=low

  * Allow to select primary/logical partitions, instead of always hiding
    it (LP: #1046175).

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 05 Sep 2012 12:08:34 +0100

ubiquity (2.11.29) quantal; urgency=low

  [ Colin Watson ]
  * Fix missing parentheses that caused removable installation media
    sometimes to be selected as the default GRUB device (LP: #987418).
  * Update translations from Launchpad (LP: #1045695).

  [ Dmitrijs Ledkovs ]
  * Automatic update of included source packages: partman-auto-lvm
    45ubuntu2. (LP: #1045812)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Tue, 04 Sep 2012 18:48:04 +0100

ubiquity (2.11.28) quantal; urgency=low

  * Fix display of installation medium mounted grid. (LP: #1044717)
    Also used pylint to find check for undefined/missing attributes in the
    ubi-partman.py. Needs integration into build system.
 
 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 03 Sep 2012 12:51:16 +0100

ubiquity (2.11.27) quantal; urgency=low

  [ Omer Akram ]
  * Fix manual partinioning edit dialog (LP: #1044545)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Sat, 01 Sep 2012 03:09:22 +0100

ubiquity (2.11.26) quantal; urgency=low

  [ Evan Dandrea ]
  * Disable alpha warning for Beta 1.

  [ Dmitrijs Ledkovs ]